--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="zoom-in" data-aos-delay="150">
                     <div class="icon-box">
                         <div class="icon">
-                            <img src="images/hands-and-gestures.svg" alt="" class="img-fluid">
+                            <img src="hands-and-gestures.svg" alt="" class="img-fluid">
                         </div>
                         <h5 class="title">Wash Hands</h5>
                     </div>
@@ -51,7 +51,7 @@
                 <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="zoom-in" data-aos-delay="150">
                     <div class="icon-box">
                         <div class="icon">
-                            <img src="images/health-care.svg" alt="" class="img-fluid">
+                            <img src="health-care.svg" alt="" class="img-fluid">
                         </div>
                         <h5 class="title">Wear Mask</h5>
                     </div>
@@ -59,7 +59,7 @@
                 <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="zoom-in" data-aos-delay="150">
                     <div class="icon-box">
                         <div class="icon">
-                            <img src="images/laptop.svg" alt="" class="img-fluid">
+                            <img src="laptop.svg" alt="" class="img-fluid">
                         </div>
                         <h5 class="title">Stay Home</h5>
                     </div>
@@ -67,7 +67,7 @@
                 <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="zoom-in" data-aos-delay="150">
                     <div class="icon-box">
                         <div class="icon">
-                            <img src="images/keep-distance.svg" alt="" class="img-fluid">
+                            <img src="keep-distance.svg" alt="" class="img-fluid">
                         </div>
                         <h5 class="title">Keep Distance</h5>
                     </div>
@@ -85,17 +85,17 @@
                 <div class="col-xl-6 d-flex order-2 order-lg-1 align-items-stretch pt-4 pt-xl-0" data-aos="fade-left" data-aos-delay="150">
                     <div class="d-flex flex-column justify-content-center">
                         <div class="row">
-                            <h4><span class="ui"><img src="images/ui.svg" height="25" width="25"></span>What are COVID-19’s symptoms?</h4>
+                            <h4><span class="ui"><img src="ui.svg" height="25" width="25"></span>What are COVID-19’s symptoms?</h4>
                             <div class="row content d-flex justify-content-center">
                                 <div class="col-lg-6 col-md-6 col-6">
                                     <div class="sym-box" data-aos="fade-right" data-aos-delay="300">
-                                        <img src="images/bacteria.svg" alt="" class="img-fluid">
+                                        <img src="bacteria.svg" alt="" class="img-fluid">
                                         <p>Cough</p>
                                     </div>
                                 </div>
                                 <div class="col-lg-6 col-md-6 col-6">
                                     <div class="sym-box" data-aos="fade-left" data-aos-delay="300">
-                                        <img src="images/cold.svg" alt="" class="img-fluid">
+                                        <img src="cold.svg" alt="" class="img-fluid">
                                         <p>Fever</p>
                                     </div>
                                 </div>
@@ -103,13 +103,13 @@
                             <div class="row content d-flex justify-content-center">
                                 <div class="col-lg-6 col-md-6 col-6">
                                     <div class="sym-box" data-aos="fade-right" data-aos-delay="150">
-                                        <img src="images/human.svg" alt="" class="img-fluid">
+                                        <img src="human.svg" alt="" class="img-fluid">
                                         <p>Difficulty breathing</p>
                                     </div>
                                 </div>
                                 <div class="col-lg-6 col-md-6 col-6">
                                     <div class="sym-box" data-aos="fade-left" data-aos-delay="150">
-                                        <img src="images/icons8-person-tired-96.png" alt="" class="img-fluid">
+                                        <img src="icons8-person-tired-96.png" alt="" class="img-fluid">
                                         <p>Tiredness</p>
                                     </div>
                                 </div>
@@ -119,7 +119,7 @@
                 </div>
 
                 <div class="image col-xl-6 d-flex order-1 order-lg-2 align-items-stretch justify-content-center justify-content-xl-start" data-aos="fade-right" data-aos-delay="300">
-                    <img src="images/undraw_mobile_browsers_lib5.svg" alt="" class="img-fluid">
+                    <img src="undraw_mobile_browsers_lib5.svg" alt="" class="img-fluid">
                 </div>
 
             </div>
