--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 
     <footer>
         <div class="text-center mt-5 col-sm-12">
-            <pre id="credits">Created by <a href="#">Shaw</a></pre>
+            <pre id="credits">Created by <a href="github.com/shaw28">Shaw</a></pre>
         </div>
     </footer>
 
